Fix product-tabs__list display on mobile

--- a/css/blocks/product-tabs.css
+++ b/css/blocks/product-tabs.css
@@ -1,10 +1,10 @@
 .product-tabs {}
 
 .product-tabs__list {
-  display: flex;
   margin-bottom: 2rem;
   background-color: var(--dark-grey);
   overflow: hidden;
+  display: none;
 }
 
 .product-tabs__tab {
@@ -63,4 +63,10 @@
 .product-tabs__entry .shop_attributes th:first-child {
   text-align: left;
   font-weight: 500;
+}
+
+@media screen and (min-width: 768px) {
+  .product-tabs__list {
+    display: flex;
+  }
 }
